--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,23 @@
     {
       "src": "web_app.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "docs/.vitepress/dist"
+      }
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",
       "dest": "web_app.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "docs/.vitepress/dist/$1"
     }
   ]
 }
